--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <title>Markdown Formatting Guide</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <header>
+    <header>
             <h1>NES Controller</h1>
         </header>
 
@@ -64,38 +63,12 @@
             <div class="step" id="usrgd">
                 <h2>User Guide</h2>
 
-                <h3>Getting Started</h3>
-                <ol>
-                    <li>
-                        Unbox the NES controller set, ensuring both controllers
-                        are present.
-                    </li>
-                    <li>
-                        Charge the controllers by attaching them to a Nintendo
-                        Switch or Nintendo Switch – OLED Model console.
-                    </li>
-                    <li>
-                        Ensure the console is powered on and ready for
-                        gameplay.
-                    </li>
-                </ol>
-
                 <h3>Connecting the Controller</h3>
-                <ol>
+                <ul>
                     <li>
-                        Attach the controller to the console via the charging
-                        rail for charging.
+                        Connect the controller to Port 1 on the Nintendo Entertainment System. (For 2nd player controller, connect to Port 2)
                     </li>
-                    <li>
-                        Once charged, detach the controller; it will connect
-                        wirelessly to the console.
-                    </li>
-                    <li>
-                        Confirm the controller is recognized in the console's
-                        controller settings.
-                    </li>
-                </ol>
-
+                </ul>
                 <h3>Basic Controls</h3>
                 <ul>
                     <li>
@@ -116,28 +89,6 @@
                     </li>
                     <li>
                         <strong>Right D-Pad:</strong> Access the HOME Menu.
-                    </li>
-                </ul>
-
-                <h3>Using with Nintendo Switch Lite</h3>
-                <ul>
-                    <li>
-                        <strong>L Button:</strong> Take a screenshot.
-                    </li>
-                    <li>
-                        <strong>Hold L Button:</strong> Take a video capture.
-                    </li>
-                    <li>
-                        <strong>R Button:</strong> Return to the HOME Menu.
-                    </li>
-                    <li>
-                        <strong>Hold R Button:</strong> Open Quick Settings
-                        Menu.
-                    </li>
-                    <li>
-                        <strong>L + R Buttons:</strong> Open Suspend Menu or
-                        quit online play (only while in a game joined as a
-                        guest).
                     </li>
                 </ul>
 
@@ -172,8 +123,8 @@
                         on the buttons and cord.
                     </li>
                     <li>
-                        Ensure the charging port is free of dust and debris for
-                        proper charging.
+                        Ensure the connection port is free of dust and debris for
+                        proper connection.
                     </li>
                 </ul>
 
@@ -205,10 +156,8 @@
 
                 <h3>Tips for Best Use</h3>
                 <ul>
-                    <li>Keep the controller within range of the console to avoid disconnection.</li>
                     <li>Hold the B button to run faster in games that support it.</li>
                     <li>Use the D-Pad carefully to avoid moving in the wrong direction during gameplay.</li>
-                    <li>Regularly check battery level to ensure uninterrupted gaming sessions.</li>
                 </ul>
             </div>
 
@@ -332,7 +281,6 @@
             <li onclick="show('cntct')">Contact Information</li>
             <a>By: Andy, Haben, Molly Quinn</a>
         </footer>
-
         <script src="script.js"></script>
     </body>
 </html>
